Changed all 100vw's to 100% to fix horizontal scroll bar bug.

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ section {
 }
 
 .nav-bar {
-    width: 100vw;
+    width: 100%;
     background-color: #002347;
     display: flex;
     flex-direction: row;
@@ -64,7 +64,7 @@ section {
 
 .about-section {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     background-color: #FF8E00;
     display: flex;
     justify-content: center;
@@ -151,7 +151,7 @@ section {
 }
 
 .portfolio-section {
-    width: 100vw;
+    width: 100%;
      /*Placeholder till cards are in then remove */
     background: #002347;
     
@@ -261,7 +261,7 @@ section {
 
 .contact-section {
     background: #FF8E00;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -302,7 +302,7 @@ section {
 .footer-container {
     position: absolute;
     bottom: 0px;
-    width: 100vw;
+    width: 100%;
     background: #002347;
     color: #FF8E00;
     display: flex;
